2008-01-04    <dancy@DANCYSOFT>

	Changes to allow for international filenames by:
	1) Using utf8 for sending/receiving filenames to/from nfs clients.
	2) Using new functions for accessing files in Windows using 16-bit
	charcaters.

	* utf8.cl, unicode-file.cl: new

	* attr.cl, dir.cl, loadem.cl, nfs.cl, openfile.cl, xdr.cl: Modified.

	* nfs-common.cl: Added a compiler macro for 'howmany' function.
	Updated my-rename function to allow for unicode support.

	* nfs.cl: Improved debugging output for 'access' procedure (and a
	few minor improvements to some other procs).

	* xdr.cl: Improved compute-padded-len function code.
	
2008-01-02    <dancy@DANCYSOFT>

	* portmap.x/portmap.cl: Added rpcbind protocol support.  

	* rpcgen.cl: Handle "unsigned long".  Fixed buglet w/ fixed-sized
	array typedefs.
	
2008-01-02    <dancy@DANCYSOFT>
4.5.1b5

	* BUGFIX: sunrpc.cl: Fixed send-prog-mismatch-reply
	function.  It wasn't adding the accept_stat before adding the low
	and high version numbers.

2007-10-31    <dancy@DANCYSOFT>
4.5.1b4
	* mountd.cl, mount.x: 

	INTEROPERABILITY [spr33930] Added support for mount protocol
	version 2.  This is the same as version 1 but w/ an extra PATHCONF
	call.  It took a while to get this figured out since it is
	completely undocumented.

	* nfs-log.cl: Include version number in "Allegro NFS running"
	message.

	* rpcgen.cl: Avoid trying to defconstant the same constant more
	than once.

	* xdr.cl: Added xdr-short and xdr-char, both of which are just
	aliases for xdr-int.  Also fixed defxdrstruct bug when building
	fixed-length arrays.

2007-10-17    <dancy@DANCYSOFT>
4.5.1b3 
	* INTEROPERABILITY: 

	Added support for mount requests of subdirs of an export.

2007-08-15    <dancy@CANDY2K>
4.5.1b2
	* dir.cl: Fixed bug from new work in 4.5.1b.

2007-08-09    <dancy@DANCYSOFT>
4.5.1b
	* Makefile: Build w/ 8.1 now.

	* INTEROPERABILITY 
	dir.cl: Major revision to attempt to work around spr33169 issues.